gccida/g3/dump_regset
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_regset/src/flow.c:4619:16: error: use of undeclared identifier 'off_698152'
fprintf( outf, off_698152, ( unsigned int)v5); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_regset/src/obj/flow.o] Error 1
